--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="county">縣市</string>
     <string name="pm25Value">PM2.5</string>
     <string name="publishTime">發佈時間</string>
+    <string name="updating">資料擷取中...</string>
 </resources>
